Add the extra 2 answers I didn't think of

--- a/lesson_3/03_easy_3/q05.md
+++ b/lesson_3/03_easy_3/q05.md
@@ -18,7 +18,7 @@ function isColorValid(color) {
 }
 ```
 
-### Solution:
+### Solution 1:
 ```diff
 function isColorValid(color) {
 -  if (color === "blue" || color === "green") {
@@ -28,4 +28,14 @@ function isColorValid(color) {
 -  }
 +  return color === "blue" || color === "green";
 }
+```
+
+### Solution 2:
+```js
+const isColorValid = (color) => color === "blue" || color === "green";
+```
+
+### Solution 3:
+```js
+const isColorValid = (color) => ["blue", "green"].includes(color);
 ```
