Correct answer for Lesson 3: Hard 1 - Question 1

--- a/lesson_3/05_hard_1/q01.md
+++ b/lesson_3/05_hard_1/q01.md
@@ -23,8 +23,7 @@ console.log(second());
 ```
 
 ### Solution:
-Yes, the functions will return objects with the same property, `prop1`, with the
-same value, `"hi there"`.
-
-Although `second()`'s code isn't common style in JavaScript, it's still
-syntactically correct.
+No, `second()` returns `undefined`, and the code following `return` never
+executes. JavaScript inserts semicolons where it thinks they're needed, and it
+actually inserts one immediately following `return`, making it a separate
+statement from the object literal beginning on the next line.
